# calbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup_auth.py  vercel.json
api/: index.py
docs/superpowers/specs/: 2026-03-25-inline-google-auth-design.md
public/: index.html  manifest.json
